--- a/02Microservices/product-enquiry-service/src/main/resources/application.yml
+++ b/02Microservices/product-enquiry-service/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
 server:
   port: 8700
   
-product-stock-service:
-  ribbon:
-    listOfServers: http://localhost:8800,http://localhost:8801
+  #Following config is not required if we use eureka server
+#product-stock-service:
+#  ribbon:
+  #  listOfServers: http://localhost:8800,http://localhost:8801
