--- a/02Microservices/product-stock-service/src/main/resources/application.yml
+++ b/02Microservices/product-stock-service/src/main/resources/application.yml
@@ -4,3 +4,11 @@ spring:
 
 server: 
   port: 8800
+  
+  
+  
+ #Following configuration is not required if Eureka server is running on default port (8761)
+#eureka:
+ # client:
+  #  serviceUrl:
+ #     defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
