Implemented Refresh config changes with Spring cloud bus

--- a/02Microservices/eureka-naming-server/src/main/resources/application.yml
+++ b/02Microservices/eureka-naming-server/src/main/resources/application.yml
@@ -3,3 +3,10 @@ spring:
     name: eureka-naming-server
 server:
   port: 8761
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    register-with-eureka: false
+    fetch-registry: false
