--- a/02Microservices/product-stock-service/src/main/resources/application.yml
+++ b/02Microservices/product-stock-service/src/main/resources/application.yml
@@ -1,11 +1,23 @@
 spring:
   application: 
     name: product-stock-service
+  #RabbitMQ connection details
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 server: 
   port: 8800
   
-  
+management:
+  security:
+    enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: "*"
   
  #Following configuration is not required if Eureka server is running on default port (8761)
 #eureka:
