Added Route for Enquiry service in Spring cloid Gateway

--- a/02Microservices/spring-cloud-api-gateway/src/main/resources/application.yml
+++ b/02Microservices/spring-cloud-api-gateway/src/main/resources/application.yml
@@ -2,13 +2,13 @@ spring:
   application:
     name: spring-clould-api-gateway
     
-#  cloud:
-#    gateway:
-#      routes:
-#        - id: stock-enquiry.service
-#          uri: http://localhost:8700/
-#          predicates:
-#            - Path=/product-enquiry/**
+  cloud:
+    gateway:
+      routes:
+        - id: stock-enquiry.service
+          uri: lb://proudct-enquiry-service
+          predicates:
+            - Path=/product-enquiry/**
           
 server:
   port: ${port:8900}
