--- a/02Microservices/product-stock-service/src/main/resources/application.yml
+++ b/02Microservices/product-stock-service/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application: 
     name: product-stock-service
+  sleuth:
+    enabled: true
+  zipkin:
+    enabled: true
+    base-url: ${ZIPKIN_SERVER:http://localhost:9411/}
   #RabbitMQ connection details
   rabbitmq:
     host: localhost
@@ -18,7 +23,12 @@ management:
     web:
       exposure:
         include: "*"
-  
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: ${EUREKA_SERVER:http://localhost:8761/eureka}   
  #Following configuration is not required if Eureka server is running on default port (8761)
 #eureka:
  # client:
